--- a/Tests/Svg.UnitTests/Svg.UnitTests.csproj
+++ b/Tests/Svg.UnitTests/Svg.UnitTests.csproj
@@ -46,6 +46,7 @@
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +59,7 @@
     <Compile Include="MarkerEndTest.cs" />
     <Compile Include="MetafileRenderingTest.cs" />
     <Compile Include="MultiThreadingTest.cs" />
+    <Compile Include="PdfPrintTest.cs" />
     <Compile Include="PrivateFontsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SvgTestHelper.cs" />
@@ -80,6 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Issue212_MakerEnd\OperatingPlan.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Issue214_PrinterGraphicRendering\Svg2Print.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
